# celestelike_raylib

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  xmake.lua
include/: app.hpp  components.hpp  debug.hpp  factory.hpp  helper.hpp  player.hpp  player_resources.hpp  player_systems.hpp  resources.hpp  save.hpp  scene.hpp  system.hpp  systems.hpp
include/engine/: entity.hpp  scene.hpp  tools.hpp  ui.hpp  world.hpp
include/game/: level_scene.hpp  player.hpp  player_inner_base.hpp  player_inner_characters.hpp
src/: app.cpp  debug.cpp  defs.h  factory.cpp  game.cpp  game.h  helper.cpp  main.cpp  player.cpp  player_systems.cpp  save.cpp  scene.cpp  system.cpp  systems.cpp
src/engine/: camera.cpp  camera.h  camera.hpp  debug.cpp  debug.h  debug.hpp  debug_x.cpp  entity.cpp  entity.h  entity.hpp  level.cpp  level.h  physics.cpp  physics.h  physics.hpp  save.cpp  save.hpp  scene.cpp  tools.cpp  tools.h  ui.cpp  ui.h  world.cpp  world.h  world.hpp
src/game/: level_scene.cpp  player.cpp  player.h  player.hpp  player_avian.cpp  player_avian.h  player_inner.cpp  player_inner.h  player_inner.hpp  player_inner_base.cpp  player_inner_characters.cpp  simple_level.cpp  simple_level.h  simple_world.cpp  simple_world.h
